--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm ci && npx prisma generate && npm run build"
+  command = "npm ci && npm run prisma:generate && npm run build"
   publish = ".next"
 
 [[plugins]]
@@ -8,3 +8,4 @@
 [build.environment]
   NODE_VERSION = "20"
   NPM_FLAGS = "--legacy-peer-deps"
+  NPM_CONFIG_PRODUCTION = "false"
