--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm ci && npm run prisma:generate && npm run build"
+  command = "npm ci && npm run build"
   publish = ".next"
 
 [[plugins]]
