--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && (prisma migrate deploy || prisma db push) && next build",
+    "build": "prisma generate && (prisma migrate deploy 2>/dev/null || (echo 'No migrations found, using db push...' && prisma db push --accept-data-loss)) && next build",
     "start": "next start",
     "lint": "eslint",
     "prisma:generate": "prisma generate",
