--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && (prisma migrate deploy 2>/dev/null || (echo 'No migrations found, using db push...' && prisma db push --accept-data-loss)) && next build",
+    "build": "prisma generate && prisma db push --accept-data-loss --skip-generate && next build",
+    "db:setup": "prisma generate && prisma db push --accept-data-loss --skip-generate",
     "start": "next start",
     "lint": "eslint",
     "prisma:generate": "prisma generate",
